--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Tic Tac Toe</title>
-
+    <link rel=stylesheet" type="text/css" href="css/main.css">
+    <script src="js/main.js"></script>
 </head>
 <body>
     <div class="container">
