--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Tic Tac Toe</h1>
         <button id="start" onclick="choosePlayerX();">START</button>
         <div class="game">
-            <table class="topRow" border="1">
+            <table border="1">
                 <tr>
                     <td>
                         <button type="button" id="button1" onclick="" disabled></button>
@@ -26,6 +26,24 @@
                 <tr>
                     <td>
                         <button type="button" id="button4" onclick="" disabled></button>
+                    </td>
+                    <td>
+                        <button type="button" id="button5" onclick="" disabled></button>
+                    </td>
+                    <td>
+                        <button type="button" id="button6" onclick="" disabled></button>
+                    </td>
+
+                </tr>
+                <tr>
+                    <td>
+                        <button type="button" id="button7" onclick="" disabled></button>
+                    </td>
+                    <td>
+                        <button type="button" id="button8" onclick="" disabled></button>
+                    </td>
+                    <td>
+                        <button type="button" id="button9" onclick="" disabled></button>
                     </td>
 
                 </tr>
