Really basic tic tac toe game

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <script src="js/game.js" ></script>
 </head>
 <body>
-    <div class=" container">
+    <div class="container">
+        <h1>TIC TAC TOE</h1>
         <button id="start" onclick="beginGame();">START GAME</button>
         <div class="game-area">
             <table id="game" height="300" width="300">
