currently works without an AI

--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
       </div>
       <div class="col-md-8 ttt-grid">
         <div class="box-row">
-          <div class="box btn btn-default" id="box-0-0">&nbsp;</div>
-          <div class="box btn btn-default" id="box-0-1">&nbsp;</div>
-          <div class="box btn btn-default" id="box-0-2">&nbsp;</div>
+          <div class="box btn btn-default" id="box0">&nbsp;</div>
+          <div class="box btn btn-default" id="box1">&nbsp;</div>
+          <div class="box btn btn-default" id="box2">&nbsp;</div>
         </div>
         <div class="box-row">
-          <div class="box btn btn-default" id="box-1-0">&nbsp;</div>
-          <div class="box btn btn-default" id="box-1-1">&nbsp;</div>
-          <div class="box btn btn-default" id="box-1-2">&nbsp;</div>
+          <div class="box btn btn-default" id="box3">&nbsp;</div>
+          <div class="box btn btn-default" id="box4">&nbsp;</div>
+          <div class="box btn btn-default" id="box5">&nbsp;</div>
         </div>
         <div class="box-row">
-          <div class="box btn btn-default" id="box-2-0">&nbsp;</div>
-          <div class="box btn btn-default" id="box-2-1">&nbsp;</div>
-          <div class="box btn btn-default" id="box-2-2">&nbsp;</div>
+          <div class="box btn btn-default" id="box6">&nbsp;</div>
+          <div class="box btn btn-default" id="box7">&nbsp;</div>
+          <div class="box btn btn-default" id="box8">&nbsp;</div>
         </div>
 
       </div>
